1.2.21: 2005-04-18
	- translation: Vietnamese (Phan Vinh Thinh)
	- translation: Indonesian (Arif E. Nugroho)
	- translation update: Simplified Chinese (Hiweeed Leng)

1.2.21pre1: 2005-03-20
	- improve selection of "urgent" windows with alt+tab
	- fix possible crash (Grant McDorman)
	- fix 64bit usage of Xft (Marcus Meissner)
	- cleanup warning on still-open file descriptors
        - disabled some Ctrl+Alt+Del commands by default since
          they need some configuring to work on all systems
        - fix desktop layer setting for nautilus

1.2.20: 2005-01-09
	- fix+revert default binding for MouseWinMove an MouseWinSize
	- fix 1 pixel border when taskbar at top of screen
	- fix themes not loading from user directory

1.2.19: 2004-12-26
	- fix crash/build failure when taskbar disabled
	- fix build/link with some gcc/g++ versions

1.2.18: 2004-12-18
	- changed icedesert colors (Hanspeter Roth)

1.2.18pre1: 2004-12-05
	- disable SupportsSemitransparency by default, this makes
	icewmbg exit after setting the image and reduces memory usage
	- fix Meta key handling typo
	- fix CPU waste in icewm-session and icewmtray
	- fix some Win+x key combinations
        - new settings MouseWinMove (=Alt+Ctrl+Pointer_Button1) and 
          MouseWinSize (=Alt+Ctrl+PointerButton3). The default bindings
          have changed from Alt+button drag to Ctrl+Alt (or Super).

1.2.17: 2004-11-07
	- fix: windows were not expanding when taskbar was hidden
	- fix: reused (hidden) application windows popped up on original
	  workspace	
	- fix: build with --disable-taskbar
	- fix: maximize/restore for rxvt
	- fix: reboot/shutdown functionality (default configuration 
	  changed to use 'sudo')

1.2.17pre2: 2004-10-31
	- fix crash on startup when mailbox or net status disabled
	- fix build with gcc > 3.3
	- fix gray lines on taskbar bottom
	- major changes in window geometry/layout handling
	- fix "tray icon"

1.2.17pre1: 2004-10-24
	- fix \ quoting in configuration files  (Eduard Bloch)